Project/MDK/.vscode/uv4.log
*** Using Compiler 'V6.15', folder: 'D:\keil_5.33\ARM\ARMCLANG\Bin'
Build target 'nor_sdram_zf_dtcm_v6'
compiling display.c...
compiling imu963.c...
compiling timer_pit.c...
compiling isr.c...
../CODE/carmove.c(418): error: expected ';' after expression
        car.Speed_Y = 5 
                       ^
                       ;
1 error generated.
compiling carmove.c...
compiling buzzer.c...
compiling motor.c...
compiling button.c...
compiling main.c...
compiling smotor.c...
compiling SEEKFREE_BLUETOOTH_CH9141.c...
compiling encoder.c...
compiling openart1.c...
compiling openart2.c...
".\Objects\RT106X.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:03
